<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Level IT!</string>
    <string name="settings">settings</string>
    <string name="no_data_available">no data available</string>
    <string name="use_external_sensor">use external sensor</string>
    <string name="back">back</string>
    <string name="about">about</string>
    <string name="warning_local_sensor">The data from the local sensor is invalid.</string>
    <string name="warning_external_sensor">The data from the external sensor is invalid. Please check your connection.</string>
    <string name="tv_connected">n.a.</string>
    <string name="tv_sensor">n.a.</string>
    <string name="tv_sensor_status">current sensor</string>
    <string name="tv_connection_status">status ext sensor</string>
    <string name="warn_at_angle">warn at angle</string>
    <string name="info">This app was developed as part of the exam in Embedded Systems I. The source code is available on GitHub.</string>
    <string name="info_2">Just click here!</string>
    <string name="developers_label">developers:</string>
    <string name="version_label">version:</string>
    <string name="dev_1">Jack Kittelmann (69615)</string>
    <string name="dev_2">Malte Schönert (69629)</string>
</resources>