<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_About">

    <TextView
        android:id="@+id/tv_source_code"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/info_2"
        android:textAlignment="textStart"
        android:textColor="@color/DeepSkyBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_nav_settings_2"
        app:layout_constraintEnd_toStartOf="@+id/space_2"
        app:layout_constraintStart_toStartOf="@+id/tv_info"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_about"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_dev_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_dev_2" />

    <TextView
        android:id="@+id/tv_dev_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_dev_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_dev_1" />

    <TextView
        android:id="@+id/tv_dev_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dev_label2"
        app:layout_constraintTop_toTopOf="@+id/tv_dev_label2" />

    <TextView
        android:id="@+id/tv_dev_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developers_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_info"
        app:layout_constraintEnd_toStartOf="@+id/bt_nav_settings_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_about"
        app:layout_constraintVertical_bias="0.518" />

    <include
        android:id="@+id/toolbar_about"
        layout="@layout/toolbar_about" />

    <Button
        android:id="@+id/bt_nav_settings_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:cornerRadius="20dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_source_code"
        app:layout_constraintEnd_toStartOf="@+id/space_2"
        app:layout_constraintStart_toEndOf="@+id/space_1" />

    <TextView
        android:id="@+id/tv_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_dev_label2"
        app:layout_constraintTop_toTopOf="@+id/tv_version" />

    <Space
        android:id="@+id/space_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_nav_settings_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/space_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_nav_settings_2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>