<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tb_status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/DeepSkyBlue"
    android:elevation="4dp">

    <TextView
        android:id="@+id/tv_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_connected"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_connection_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_sensor">

    </TextView>

    <TextView
        android:id="@+id/tv_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sensor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sensor_status"
        app:layout_constraintTop_toTopOf="@+id/tv_sensor_status" />

    <TextView
        android:id="@+id/tv_sensor_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tv_sensor_status"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/tv_app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_connection_status"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sensor_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_sensor_status" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>