<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_SettingsActivity">

    <include
        android:id="@+id/toolbar_settings"
        layout="@layout/toolbar_settings" />

    <Switch
        android:id="@+id/sw_extsensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_external_sensor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <Button
        android:id="@+id/bt_nav_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:cornerRadius="20dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_nav_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:cornerRadius="20dip"
        app:layout_constraintBottom_toTopOf="@+id/bt_nav_main"
        app:layout_constraintEnd_toEndOf="@+id/bt_nav_main"
        app:layout_constraintStart_toStartOf="@+id/bt_nav_main"
        app:layout_constraintTop_toBottomOf="@+id/et_warning_angle" />

    <Switch
        android:id="@+id/sw_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/warn_at_angle"
        app:layout_constraintEnd_toEndOf="@+id/sw_extsensor"
        app:layout_constraintTop_toBottomOf="@+id/sw_extsensor" />

    <EditText
        android:id="@+id/et_warning_angle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/sw_warning"
        app:layout_constraintStart_toStartOf="@+id/sw_warning"
        app:layout_constraintTop_toBottomOf="@+id/sw_warning" />
</androidx.constraintlayout.widget.ConstraintLayout>